<resources>

    <string name="app_name">Assistant</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="week_odd">Odd</string>
    <string name="week_even">Even</string>

    <string-array name="schedule_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="tuesday_cut">TU</string>
    <string name="wednesday_cut">WE</string>
    <string name="thursday_cut">TH</string>
    <string name="friday_cut">FR</string>
    <string name="saturday_cut">SA</string>
    <string name="monday_cut">MO</string>

    <string name="error_msg">Error loading schedule</string>

    <string name="about_title" translatable="false">MIREA Assistant 2.2 \n by Ruslan Vinter</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="downloaded_msg">Schedule successfully updated</string>
    <string name="button_next">Next</string>
    <string name="button_loading">Loading</string>
    <string name="hello">Hello!</string>
    <string name="group_enter">Enter Your group</string>
    <string name="your_group">Your group:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_manual_update">Manually refresh</string>
    <string name="appwidget_text" translatable="false">Assistant widget</string>
    <string name="add_widget">Add widget</string>

</resources>
