<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.login.LoginActivity">

        <EditText
            android:id="@+id/group_input2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/grey_ripple"
            android:digits="0,1,2,3,4,5,6,7,8,9,йцукенгшщзхъфывапролджэёячсмитьбю,ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЁЯЧСМИТЬБЮ,-()"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/group_enter"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/group_input2"
            android:layout_centerHorizontal="true"
            android:text="@string/hello"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_input2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/blue_ripple"
            android:text="@string/button_next"
            android:textColor="@color/ic_launcher_background" />

    </RelativeLayout>
</ScrollView>