<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.Settings">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_schedule"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:gravity="center_vertical|fill_vertical"
                android:text="@string/settings_title"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/icon_app_large" />

            <TextView
                android:id="@+id/settings_about_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:lineSpacingExtra="6dp"
                android:text="@string/about_title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/your_group"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/group_button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"

                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/grey_ripple"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="ИКБО-13-17"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_feedback"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/grey_ripple"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/settings_feedback"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/grey_ripple"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/settings_manual_update"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/test_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clear Database"
                android:visibility="gone" />

            <Button
                android:id="@+id/test_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Log database"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>